--- a/duelo-dos-nove.html
+++ b/duelo-dos-nove.html
@@ -9,20 +9,10 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="navegacao">
-                <li><a href="index.html" class="logo">PEDRA, PAPEL, TESOURA!</a></li>
-                <li><a href="tradicional.html"> Tradicional </a></li>
-                <li><a href="duelo-dos-nove.html">Duelo dos Nove</a></li>
-                <li><a href="#"> </a></li>
-            </ul>
-        </nav>
+        <h3 class="subtitulo">Escolha sua jogada e teste suas habilidades no clássico jogo de pedra, papel e tesoura!<h3></h3>
     </header>
 
     <div class="geral-ddn">
-        <h1 class="titulo">Pedra, Papel e Tesoura! - Duelo dos Nove</h1>
-        <h3 class="subtitulo">Escolha sua jogada e teste suas habilidades no clássico jogo de pedra, papel e tesoura!<h3>
-      
         <div class="botoes">
             <!-- Botão Pedra -->
             <button onclick="jogar('Pedra')">
@@ -62,11 +52,10 @@
             <!-- Esponja -->
             <button onclick="jogar('Esponja')">
                 <img src="img/esponja.svg"  width="50px">
-
             </button>
     </div>
     <div id="resultado" style="font-size: 15px;"></div>
-            <p>Jogador: <span id="pontuacaoJogador">0</span> | Computador: <span id="pontuacaoComputador">0</span></p>
+            <p>Jogador: <span id="pontuacaoJogador" class="pontos">0</span> | Computador: <span id="pontuacaoComputador" class="pontos">0</span></p>
         </div>
     <footer>
         <p>Todos os direitos reservados à <a href="https://github.com/EscandioNeider">EscandioNeider</a></p>
