--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <nav>
             <ul class="navegacao">
                 <li><a href="index.html" class="logo">PEDRA, PAPEL, TESOURA!</a></li>
-                <li><a href="tradicional.html"> Tradicional </a></li>
-                <li><a href="duelo-dos-nove.html">Duelo dos Nove</a></li>
-                <li><a href="#"> </a></li>
+                <li><a href="menu-trad.html"> Tradicional </a></li>
+                <li><a href="menu-ddn.html">Duelo dos Nove</a></li>
             </ul>
         </nav>
     </header>
