--- a/menu-trad.html
+++ b/menu-trad.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-       <h1>PEDRA, PAPEL, TESOURA! - DUELO DOS NOVE</h1> 
+       <h1>PEDRA, PAPEL, TESOURA! - TRADICIONAL</h1> 
 
        <div class="botoes">
        
@@ -37,7 +37,7 @@
 
        <!-- Iframe incorporado -->
        <iframe 
-           src="duelo-dos-nove.html" 
+           src="tradicional.html" 
            width="800" 
            height="1000" 
            frameborder="auto" 
