--- a/tradicional.html
+++ b/tradicional.html
@@ -9,20 +9,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="navegacao">
-                <li><a href="index.html" class="logo">PEDRA, PAPEL, TESOURA!</a></li>
-                <li><a href="tradicional.html"> Tradicional </a></li>
-                <li><a href="duelo-dos-nove.html">Duelo dos Nove</a></li>
-                <li><a href="#"> </a></li>
-            </ul>
-        </nav>
+        <h3 class="subtitulo">Escolha sua jogada e teste suas habilidades no clássico jogo de pedra, papel e tesoura!<h3>
     </header>
 
     <main>
         <div class="geral-trad">
-            <h1 class="titulo">Pedra, Papel e Tesoura! - Tradicional</h1>
-            <h3 class="subtitulo">Escolha sua jogada e teste suas habilidades no clássico jogo de pedra, papel e tesoura!<h3>
           
             <div class="botoes">
                 <!-- Botão Pedra -->
@@ -41,7 +32,7 @@
                 </button>
             </div>
         <div id="resultado" style="font-size: 15px;"></div>
-            <p>Jogador: <span id="pontuacaoJogador">0</span> | Computador: <span id="pontuacaoComputador">0</span></p>
+            <p>Jogador: <span id="pontuacaoJogador" class="pontos">0</span> | Computador: <span id="pontuacaoComputador" class="pontos">0</span></p>
         </div>
 
     </main>
