--- a/menu-trad.html
+++ b/menu-trad.html
@@ -29,7 +29,7 @@
        <div id="Regras" style="display: none;">
         <p>Objetivo: Vencer o adversário utilizando os elementos dos botões: 
             <br>
-            "Pedra", "Papel", "Tesoura", "Fogo", "Agua", "Martelo", "Cobra", "Agulha" e "Esponja".
+            "Pedra", "Papel", "Tesoura".
         <br><br>
         <!-- Regras aqui -->
         </p>
