--- a/menu-ddn.html
+++ b/menu-ddn.html
@@ -19,21 +19,7 @@
     </header>
 
     <main>
-       <h1>PEDRA, PAPEL, TESOURA! - DUELO DOS NOVE</h1> 
-
-       <div class="botoes">
-       
-        <button id="botaoRegra" onclick="janelaRegras()" >REGRAS</button>
-       </div>
-       
-       <div id="Regras" style="display: none;">
-        <p>Objetivo: Vencer o adversário utilizando os elementos dos botões: 
-            <br>
-            "Pedra", "Papel", "Tesoura", "Fogo", "Agua", "Martelo", "Cobra", "Agulha" e "Esponja".
-        <br><br>
-        <!-- Regras aqui -->
-        </p>
-       </div>
+       <h2 class="titulo">PEDRA, PAPEL, TESOURA! - DUELO DOS NOVE</h2> 
 
        <!-- Iframe incorporado -->
        <iframe 
